--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,3 +53,11 @@ table td {
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
 }
+
+.limit-lines-1 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+}
